template/iac_eval/gpt/gpt-4o/full/row_452_full_update_1_template_20250518_185520.tf
The Terraform program will establish a VPC peering connection between two AWS Virtual Private Clouds (VPCs). The first VPC, named "peer," will have a CIDR block of 10.0.0.0/24, and the second VPC, named "base," will have a CIDR block of 10.1.0.0/24. A VPC peering connection named "pike" will be created to connect these two VPCs, allowing them to communicate with each other. The peering connection will be tagged with `pike = "permissions"` to indicate its purpose or management policy. The configu [...]

<iac_template>
```hcl
provider "aws" {
  region = "us-east-1"
}

resource "aws_vpc" "peer" {
  cidr_block = "10.0.0.0/24"
  tags = {
    Name = "peer"
  }
}

resource "aws_vpc" "base" {
  cidr_block = "10.1.0.0/24"
  tags = {
    Name = "base"
  }
}

resource "aws_vpc_peering_connection" "pike" {
  vpc_id        = aws_vpc.peer.id
  peer_vpc_id   = aws_vpc.base.id
  auto_accept   = true

  tags = {
    Name = "pike"
    pike = "permissions"
  }
}

resource "aws_vpc_peering_connection_accepter" "pike" {
  vpc_peering_connection_id = aws_vpc_peering_connection.pike.id
  auto_accept               = true

  tags = {
    Name = "pike"
    pike = "permissions"
  }
}

resource "aws_route" "peer_to_base" {
  route_table_id            = aws_vpc.peer.main_route_table_id
  destination_cidr_block    = aws_vpc.base.cidr_block
  vpc_peering_connection_id = aws_vpc_peering_connection.pike.id
}

resource "aws_route" "base_to_peer" {
  route_table_id            = aws_vpc.base.main_route_table_id
  destination_cidr_block    = aws_vpc.peer.cidr_block
  vpc_peering_connection_id = aws_vpc_peering_connection.pike.id
}
```
</iac_template>
